@@ -3,6 +3,9 @@
 :mod:`pyramid.authentication`
 --------------------------------
 
+Authentication Policies
+~~~~~~~~~~~~~~~~~~~~~~~
+
 .. automodule:: pyramid.authentication
 
   .. autoclass:: AuthTktAuthenticationPolicy
@@ -10,4 +13,11 @@
   .. autoclass:: RepozeWho1AuthenticationPolicy
 
   .. autoclass:: RemoteUserAuthenticationPolicy
+
+Helper Classes
+~~~~~~~~~~~~~~
+
+  .. autoclass:: AuthTktCookieHelper
+
+
 
